Zerda- corrected my code